mejoras del swagger
